scheduling: Use Optional instead of nulls for balancer results
This patch converts most of the balancing return values
from nullable Pair<...> to Optional<BalancingResult>
with the goal of achieving better type safety.

Change-Id: Id0f54389a72aad870b61d4b9f58ccac1efdda488
Signed-off-by: Martin Sivak <msivak@redhat.com>