@@ -2,22 +2,23 @@ package org.ovirt.engine.core.bll.scheduling.policyunits;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertTrue;
 
 import java.util.ArrayList;
 import java.util.HashMap;
-import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 
 import org.junit.ClassRule;
 import org.junit.Test;
 import org.ovirt.engine.core.bll.scheduling.PolicyUnitParameter;
+import org.ovirt.engine.core.bll.scheduling.external.BalanceResult;
 import org.ovirt.engine.core.common.businessentities.BusinessEntity;
 import org.ovirt.engine.core.common.businessentities.Cluster;
 import org.ovirt.engine.core.common.businessentities.VDS;
 import org.ovirt.engine.core.common.businessentities.VM;
 import org.ovirt.engine.core.common.config.ConfigValues;
 import org.ovirt.engine.core.common.utils.MockConfigRule;
-import org.ovirt.engine.core.common.utils.Pair;
 import org.ovirt.engine.core.compat.Guid;
 
 public class EvenDistributionBalancePolicyUnitTest extends CpuAndMemoryBalancingPolicyUnitTest {
@@ -49,11 +50,13 @@ public class EvenDistributionBalancePolicyUnitTest extends CpuAndMemoryBalancing
 
         EvenDistributionBalancePolicyUnit unit = mockUnit(EvenDistributionBalancePolicyUnit.class, cluster, hosts, vms);
 
-        Pair<List<Guid>, Guid> result = unit.balance(cluster, new ArrayList<>(hosts.values()), parameters, messages);
+        Optional<BalanceResult> result = unit.balance(cluster, new ArrayList<>(hosts.values()), parameters, messages);
         assertNotNull(result);
-        assertNotNull(result.getSecond());
-        assertEquals(result.getFirst().size(), 1);
-        assertEquals(result.getFirst().get(0), DESTINATION_HOST);
+        assertTrue(result.isPresent());
+        assertTrue(result.get().isValid());
+        assertNotNull(result.get().getVmToMigrate());
+        assertEquals(result.get().getCandidateHosts().size(), 1);
+        assertEquals(result.get().getCandidateHosts().get(0), DESTINATION_HOST);
     }
 
     @Test
@@ -71,11 +74,13 @@ public class EvenDistributionBalancePolicyUnitTest extends CpuAndMemoryBalancing
 
         EvenDistributionBalancePolicyUnit unit = mockUnit(EvenDistributionBalancePolicyUnit.class, cluster, hosts, vms);
 
-        Pair<List<Guid>, Guid> result = unit.balance(cluster, new ArrayList<>(hosts.values()), parameters, messages);
+        Optional<BalanceResult> result = unit.balance(cluster, new ArrayList<>(hosts.values()), parameters, messages);
         assertNotNull(result);
-        assertNotNull(result.getSecond());
-        assertEquals(result.getFirst().size(), 1);
-        assertEquals(result.getFirst().get(0), DESTINATION_HOST);
+        assertTrue(result.isPresent());
+        assertTrue(result.get().isValid());
+        assertNotNull(result.get().getVmToMigrate());
+        assertEquals(result.get().getCandidateHosts().size(), 1);
+        assertEquals(result.get().getCandidateHosts().get(0), DESTINATION_HOST);
     }
 
     /**
@@ -96,8 +101,8 @@ public class EvenDistributionBalancePolicyUnitTest extends CpuAndMemoryBalancing
 
         EvenDistributionBalancePolicyUnit unit = mockUnit(EvenDistributionBalancePolicyUnit.class, cluster, hosts, vms);
 
-        Pair<List<Guid>, Guid> result = unit.balance(cluster, new ArrayList<>(hosts.values()), parameters, messages);
-        assert result == null;
+        Optional<BalanceResult> result = unit.balance(cluster, new ArrayList<>(hosts.values()), parameters, messages);
+        assert !result.isPresent();
     }
 
     /**
@@ -119,11 +124,13 @@ public class EvenDistributionBalancePolicyUnitTest extends CpuAndMemoryBalancing
 
         EvenDistributionBalancePolicyUnit unit = mockUnit(EvenDistributionBalancePolicyUnit.class, cluster, hosts, vms);
 
-        Pair<List<Guid>, Guid> result = unit.balance(cluster, new ArrayList<>(hosts.values()), parameters, messages);
+        Optional<BalanceResult> result = unit.balance(cluster, new ArrayList<>(hosts.values()), parameters, messages);
         assertNotNull(result);
-        assertNotNull(result.getSecond());
-        assertEquals(result.getFirst().size(), 1);
-        assertEquals(result.getFirst().get(0), DESTINATION_HOST);
+        assertTrue(result.isPresent());
+        assertTrue(result.get().isValid());
+        assertNotNull(result.get().getVmToMigrate());
+        assertEquals(result.get().getCandidateHosts().size(), 1);
+        assertEquals(result.get().getCandidateHosts().get(0), DESTINATION_HOST);
     }
 
     /**
@@ -145,7 +152,7 @@ public class EvenDistributionBalancePolicyUnitTest extends CpuAndMemoryBalancing
 
         EvenDistributionBalancePolicyUnit unit = mockUnit(EvenDistributionBalancePolicyUnit.class, cluster, hosts, vms);
 
-        Pair<List<Guid>, Guid> result = unit.balance(cluster, new ArrayList<>(hosts.values()), parameters, messages);
-        assert result == null;
+        Optional<BalanceResult> result = unit.balance(cluster, new ArrayList<>(hosts.values()), parameters, messages);
+        assert !result.isPresent();
     }
 }
